--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
     flex-direction: column;
 }
 .container{
-    width: 80%;
+    width: 92%;
     max-width: 1400px;
     margin: 0 auto;
 }
@@ -22,7 +22,7 @@ header{
     padding: 50px 0;
 }
 img{
-    width: 400px;
+    width: 300px;
     height: auto;
 }
 main{
@@ -33,6 +33,8 @@ main{
 }
 h1{
     font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 16px;
 }
 p{
     font-size: 24px;
